# varstardetect

./: LICENSE.txt  MANIFEST.in  README  README.md  __init__.py  setup.cfg  setup.py
src/varstardetect/: Star.py  StarProcessor.py  VarStarDetect.py
src/varstardetect/Targets/: sector_1.csv
varstardetect/: Star.py  StarProcessor.py  VarStarDetect.py  __init__.py
varstardetect/Targets/: sector_1.csv
