[metadata]
name = varstardetect
version = 1.0.1
author = Nicolas Carrizosa Arias, Jorge Perez Gonzalez and Andres Cadenas Blanco
author_email = varstardetect@gmail.com
description = TESS Variable Star Light Curve Fitter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VarStarDetect/varstardetect
project_urls =
    Bug Tracker = https://github.com/VarStarDetect/varstardetect/issues
classifiers =
    Programming Language :: Python :: 3
    Framework :: Matplotlib
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src